# GetAttractionBasin

./: .gitignore  .gitmodules  AlgoDetails.md  CMakeLists.txt  GetAttractorBasin.sln  GetAttractorBasin.vcxproj  GetAttractorBasin.vcxproj.filters  SetupDynSystem.py  main.cpp  readme.md
ExampleDynSys/: IzhikevichSpiking.hpp
Headers/: DynamicalSystem.hpp  GetAttrBasin.hpp  Transform.hpp
Source/: DynamicalSystemInclude.in  GetAttrBasinExeMain.cpp  GetAttrBasinMexMain.cpp
Tests/: .gitignore  DefaultDynSysSetup.py  MatlabIzhikExeTestScript.m  MatlabIzhikTestScript.m  SimpleIzhikSetup.py
headers/: LinearRegion.hpp  LinearRegion.inl  Point.hpp  Region.cpp  Region.hpp  Transform.hpp
